rag, odl
